@@ -4,13 +4,20 @@
 VERSION 5.0.6 (May 15, 2002)
 ============================
 
+  * FIXED: MT: At halt/0, joint threads that are already terminated rather
+    than canceling them.
+
+  * FIXED: MT: avoid race-conditions in atom-garbage collection when creating
+    new threads or threads are about to end.  Patch by Sergey Tikhonov.
+    Thanks!
+
   * FIXED: expand_file_name/2 to return directories again.
 
   * FIXED: module(Module) argument of read_term/[2,3], fixing GUI-Tracer
     problems when using local operator-declarations.
 
   * PORT: pl.spec (building RPMS) to follow current standards.
-    By Michel Alexandre Salim
+    By Michel Alexandre Salim.
 
   * FIXED: Choicepoint-view of GUI tracer.
 
